# ANNSIM_2026_xdevs_no_std

./: .gitignore  README.md  nd_creator.py
common_logic/: Cargo.toml
common_logic/src/: lib.rs
esp_32_c6_project/: Cargo.toml  nd_creator.py  read_esp32.sh
pc_simulation/: Cargo.toml
pc_simulation/src/: main.rs  sim_models.rs
