[package]
name = "pc_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "io-std"] }
xdevs-no-std = {git = "https://github.com/iscar-ucm/xdevs_no_std.rs.git", branch = "component2", features = ["std"] }
csv = "1.4"
common_logic = {path = "../common_logic"}